# bot

./: .gitignore  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/: data.py  memory.py  pyPDFLoader.py  robot.py  test.py  test01.py  test02.py
src/langchain01/: __init__.py
